# mujica

./: CMakeLists.txt  Makefile
include/: annealing.hpp  fusion.hpp  genetic.hpp  mapper.hpp  mapping.hpp  partition.hpp  tiling.hpp  tiling_analysis.hpp
include/algo/: genetic.hpp  mcts.hpp
include/algorithm/: annealing.hpp  genetic.hpp  mcts.hpp
include/arch/: mesh.hpp
include/dnn/: dag.hpp  dimension.hpp  group.hpp  operator.hpp  tensor.hpp
onnx/: bert.py
src/: main.cpp
